--- a/GroupProjects/DM1_GROUPE11.ipynb
+++ b/GroupProjects/DM1_GROUPE11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6aa97456",
+   "id": "d0f42c3a",
    "metadata": {},
    "source": [
     "# <font color='289C4E'>Devoir Maison 1: Régression Linéaire Multiple\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c4d24a",
+   "id": "548a51fc",
    "metadata": {},
    "source": [
     "### <font color='289C4E'>Table des matières<font><a class='anchor' id='top'></a>\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c1e84a2",
+   "id": "33b5772e",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.1 Estimation par moindres carrés du vecteur $\\beta$</font></h1> <a class=\"anchor\" id=\"Partie1\"></a>"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57bc68d1",
+   "id": "eb08aeeb",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"E1\"></a>"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ec2827",
+   "id": "8283672a",
    "metadata": {},
    "source": [
     "On remarque que toute solution $\\hat{u} \\in \\argmin_{u \\in \\mathbb{R}^p} J_n(u)$ est une solution de l'équation $\\nabla J_n(u) = 0_{\\mathbb{R}^p}$.\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5c0539",
+   "id": "3d33bf11",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"E2\"></a>"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f3f3aac",
+   "id": "096490f9",
    "metadata": {},
    "source": [
     "Premièrement, on a $ Z^\\#Z = (Z^TZ)^{-1}Z^TZ = I_p $. $\\\\$\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e47fac",
+   "id": "00efc6fb",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"E3\"></a>"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a8349dd",
+   "id": "20ddb9ad",
    "metadata": {},
    "source": [
     "L'estimateur des moindres carrés $\\hat{\\beta}$ vérifie\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20ee8ad",
+   "id": "9d55c016",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"E4\"></a>"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "168df295",
+   "id": "61ebda91",
    "metadata": {},
    "source": [
     "On veut calculer $\\mathbb{E}[\\hat{\\beta}]$.\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc52d6f3",
+   "id": "fd2fb26e",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"E5\"></a>"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945fa241",
+   "id": "1c7165eb",
    "metadata": {},
    "source": [
     "Soit $\\theta \\in \\Theta$. On a\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9a35c5",
+   "id": "193232aa",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"E6\"></a>"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef00469b",
+   "id": "2ecd6c1b",
    "metadata": {},
    "source": [
     "Pour que l'estimateur soit sans biais, on veut $\\mathbb{E}[\\tilde{\\beta}] = \\beta$.\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3907d5ce",
+   "id": "b2e6077d",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 7</font></h2> <a class=\"anchor\" id=\"E7\"></a>"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f236250",
+   "id": "b17591d8",
    "metadata": {},
    "source": [
     "On veut calculer la matrice de covariance $\\mathrm{Cov}_{\\theta}(\\tilde{\\beta},\\hat{\\beta})$.\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b223184a",
+   "id": "c6f935d3",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 8</font></h2> <a class=\"anchor\" id=\"E8\"></a>"
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a06dd28",
+   "id": "901186c2",
    "metadata": {},
    "source": [
     "Soit $\\theta \\in \\Theta$ et $x \\in \\mathbb{R}^p$.\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36f5aed",
+   "id": "b32d03d3",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.2 Estimation de la variance $\\sigma^2$ et Coefficient de détermination</font></h1> <a class=\"anchor\" id=\"Partie2\"></a>"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e19b1ed3",
+   "id": "58e879ff",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 9</font></h2> <a class=\"anchor\" id=\"E9\"></a>"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16fc9708",
+   "id": "35ae9b48",
    "metadata": {},
    "source": [
     "On pose\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98977eb0",
+   "id": "53be6ae7",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 10</font></h2> <a class=\"anchor\" id=\"E10\"></a>"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f7465c0",
+   "id": "69329a30",
    "metadata": {},
    "source": [
     "On a $ ||Y||^2 = || HY + (I_n - H)Y ||^2$.\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5ebc34",
+   "id": "551142e9",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.3 Cas de la régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie3\"></a>"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df12be7f",
+   "id": "34caefc3",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 11</font></h2> <a class=\"anchor\" id=\"E11\"></a>"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81dbbdd2",
+   "id": "c7ae141a",
    "metadata": {},
    "source": [
     "Une fois que les $\\{Y_i\\}$ sont i.i.d la vraisemblance est donnée par\n",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99fa11ad",
+   "id": "63d0c0ca",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 12</font></h2> <a class=\"anchor\" id=\"E12\"></a>"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "587d2519",
+   "id": "2da206a3",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}, \\theta \\in \\Theta$ on a\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d346d0",
+   "id": "11a366fc",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 13</font></h2> <a class=\"anchor\" id=\"E13\"></a>"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c4ecfc",
+   "id": "e2a76698",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}, \\theta \\in \\Theta$.\n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec52e374",
+   "id": "393427e9",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 14</font></h2> <a class=\"anchor\" id=\"E14\"></a>"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c798112",
+   "id": "57f21f87",
    "metadata": {},
    "source": [
     "Par le théorème de Cochran on sait que $(I_n - H)\\epsilon(\\theta)$ et $H\\epsilon(\\theta)$ sont deux vecteurs gaussiens indépendantes, or nous avons vu que $\\hat{\\sigma}^2$ est une fonction deterministe de $(I_n - H)\\epsilon(\\theta)$ et $\\hat{\\beta}$ est une fonction deterministe de $H\\epsilon(\\theta)$.\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe2fdb2",
+   "id": "4042d959",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.4 Tests statistiques, cas régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie4\"></a>"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6844f83",
+   "id": "d62f97b6",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 15</font></h2> <a class=\"anchor\" id=\"E15\"></a>"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d810cfb1",
+   "id": "e82dd333",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}$.\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4738e60",
+   "id": "2e546896",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 16</font></h2> <a class=\"anchor\" id=\"E16\"></a>"
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be2291d",
+   "id": "a48771b7",
    "metadata": {},
    "source": [
     "Soit $q_{\\frac{\\alpha}{2}}^{n-p}$ et $q_{1 - \\frac{\\alpha}{2}}^{n-p}$ les quantiles d'ordre $\\frac{\\alpha}{2}$ et $1 - \\frac{\\alpha}{2}$ de la loi de Student à $(n-p)$ degrés de liberté $T_{(n-p)}$.\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "438c1bec",
+   "id": "6840ffe5",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 17</font></h2> <a class=\"anchor\" id=\"E17\"></a>"
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6032d6a4",
+   "id": "ae618ec1",
    "metadata": {},
    "source": [
     "Premièrement, on définit la statistique de test\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c796587d",
+   "id": "358ea978",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 18</font></h2> <a class=\"anchor\" id=\"E18\"></a>"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a65ca35",
+   "id": "c2d897dc",
    "metadata": {},
    "source": [
     "Étant donné l'observation $x$, la $p$-valeur est la valeur $\\hat{\\alpha}$ telle que $H_0$ est rejetée pour tout $\\alpha > \\hat{\\alpha}$.\n",
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4596e78",
+   "id": "414c9d62",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 19</font></h2> <a class=\"anchor\" id=\"E19\"></a>"
@@ -609,13 +609,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41576227",
+   "id": "5bdbee5b",
    "metadata": {},
-   "source": []
+   "source": [
+    "Soit $A$ une matrice de taille $q \\times p$ de rang $q \\leq p$ et donc \n",
+    "$$ rg \\left( A(Z^TZ)^{-1}A^T \\right) = q. $$\n",
+    "\n",
+    "D'autre part $A(\\hat{\\beta} - \\beta)$ est un vecteur gaussien de moyenne nulle et de variance $A \\mathrm{Var}_{\\theta}(\\hat{\\beta}) A^T = \\sigma^2 A (Z^TZ)^{-1} A^T$. Donc\n",
+    "$$ \\frac{1}{\\sigma^2} \\left( A (\\beta^T - \\beta) \\right)^T [A(Z^TZ)^{-1}A^T]^{-1} \\left( A (\\beta^T - \\beta) \\right) \\sim \\chi_q^2.$$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "af57c5c3",
+   "id": "c8be1d8a",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 20</font></h2> <a class=\"anchor\" id=\"E20\"></a>"
@@ -623,13 +629,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f08c1c",
+   "id": "ea7d7653",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a6f8850f",
+   "id": "e4352710",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='gray'>Python Imports</font></h2> <a class=\"anchor\" id=\"imports\"></a>"
@@ -637,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d589a948",
+   "id": "3332626c",
    "metadata": {},
    "source": [
     "Dans cette section, on va importer tous les paquets qu'on ira utiliser."
@@ -646,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0de503a0",
+   "id": "3e2c4358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdab0b84",
+   "id": "3ab119e9",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>2. Pratique</font></h1> <a class=\"anchor\" id=\"Pratique\"></a>"
@@ -667,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f307f75",
+   "id": "33911dc8",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"P1\"></a>"
@@ -676,14 +682,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "848b4c25",
+   "id": "344ffa15",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ed26f331",
+   "id": "09153862",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"P2\"></a>"
@@ -692,14 +698,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63fb5289",
+   "id": "1b67c8d3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e56faba6",
+   "id": "69beb4ce",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"P3\"></a>"
@@ -708,14 +714,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18298b89",
+   "id": "cf3faabf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "60077d69",
+   "id": "a12abff4",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"P4\"></a>"
@@ -724,14 +730,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e792958",
+   "id": "aca3eb57",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f4dbb656",
+   "id": "94e523ab",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"P5\"></a>"
@@ -740,14 +746,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48352411",
+   "id": "e5759c88",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ba806d0e",
+   "id": "a4b69ed2",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"P6\"></a>"
@@ -756,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc4bae7",
+   "id": "4a6518e8",
    "metadata": {},
    "outputs": [],
    "source": []
