--- a/GroupProjects/DM1_GROUPE11.ipynb
+++ b/GroupProjects/DM1_GROUPE11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0f42c3a",
+   "id": "6d5d2a73",
    "metadata": {},
    "source": [
     "# <font color='289C4E'>Devoir Maison 1: Régression Linéaire Multiple\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548a51fc",
+   "id": "21c54a46",
    "metadata": {},
    "source": [
     "### <font color='289C4E'>Table des matières<font><a class='anchor' id='top'></a>\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b5772e",
+   "id": "76fda49c",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.1 Estimation par moindres carrés du vecteur $\\beta$</font></h1> <a class=\"anchor\" id=\"Partie1\"></a>"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb08aeeb",
+   "id": "b5bb3209",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"E1\"></a>"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8283672a",
+   "id": "a1d40878",
    "metadata": {},
    "source": [
     "On remarque que toute solution $\\hat{u} \\in \\argmin_{u \\in \\mathbb{R}^p} J_n(u)$ est une solution de l'équation $\\nabla J_n(u) = 0_{\\mathbb{R}^p}$.\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d33bf11",
+   "id": "b904a542",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"E2\"></a>"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096490f9",
+   "id": "c59038ac",
    "metadata": {},
    "source": [
     "Premièrement, on a $ Z^\\#Z = (Z^TZ)^{-1}Z^TZ = I_p $. $\\\\$\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00efc6fb",
+   "id": "591fb782",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"E3\"></a>"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ddb9ad",
+   "id": "10d0c261",
    "metadata": {},
    "source": [
     "L'estimateur des moindres carrés $\\hat{\\beta}$ vérifie\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d55c016",
+   "id": "b6e286b0",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"E4\"></a>"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ebda91",
+   "id": "da25a999",
    "metadata": {},
    "source": [
     "On veut calculer $\\mathbb{E}[\\hat{\\beta}]$.\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd2fb26e",
+   "id": "6bc6622a",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"E5\"></a>"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7165eb",
+   "id": "232918cf",
    "metadata": {},
    "source": [
     "Soit $\\theta \\in \\Theta$. On a\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "193232aa",
+   "id": "82061597",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"E6\"></a>"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ecd6c1b",
+   "id": "796045a4",
    "metadata": {},
    "source": [
     "Pour que l'estimateur soit sans biais, on veut $\\mathbb{E}[\\tilde{\\beta}] = \\beta$.\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e6077d",
+   "id": "63b2184e",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 7</font></h2> <a class=\"anchor\" id=\"E7\"></a>"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17591d8",
+   "id": "4dbb77c7",
    "metadata": {},
    "source": [
     "On veut calculer la matrice de covariance $\\mathrm{Cov}_{\\theta}(\\tilde{\\beta},\\hat{\\beta})$.\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6f935d3",
+   "id": "4ea10f99",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 8</font></h2> <a class=\"anchor\" id=\"E8\"></a>"
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901186c2",
+   "id": "2416f615",
    "metadata": {},
    "source": [
     "Soit $\\theta \\in \\Theta$ et $x \\in \\mathbb{R}^p$.\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32d03d3",
+   "id": "b46da675",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.2 Estimation de la variance $\\sigma^2$ et Coefficient de détermination</font></h1> <a class=\"anchor\" id=\"Partie2\"></a>"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e879ff",
+   "id": "85d5a725",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 9</font></h2> <a class=\"anchor\" id=\"E9\"></a>"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35ae9b48",
+   "id": "73118e8e",
    "metadata": {},
    "source": [
     "On pose\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53be6ae7",
+   "id": "af41f8e0",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 10</font></h2> <a class=\"anchor\" id=\"E10\"></a>"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69329a30",
+   "id": "c474fe7e",
    "metadata": {},
    "source": [
     "On a $ ||Y||^2 = || HY + (I_n - H)Y ||^2$.\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "551142e9",
+   "id": "aae4cdcb",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.3 Cas de la régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie3\"></a>"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34caefc3",
+   "id": "298bb61f",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 11</font></h2> <a class=\"anchor\" id=\"E11\"></a>"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ae141a",
+   "id": "5b7273e1",
    "metadata": {},
    "source": [
     "Une fois que les $\\{Y_i\\}$ sont i.i.d la vraisemblance est donnée par\n",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d0c0ca",
+   "id": "2ff3d6dd",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 12</font></h2> <a class=\"anchor\" id=\"E12\"></a>"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da206a3",
+   "id": "03633423",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}, \\theta \\in \\Theta$ on a\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a366fc",
+   "id": "ea851600",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 13</font></h2> <a class=\"anchor\" id=\"E13\"></a>"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a76698",
+   "id": "54bc0189",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}, \\theta \\in \\Theta$.\n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393427e9",
+   "id": "03ddefb8",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 14</font></h2> <a class=\"anchor\" id=\"E14\"></a>"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57f21f87",
+   "id": "b7377bc3",
    "metadata": {},
    "source": [
     "Par le théorème de Cochran on sait que $(I_n - H)\\epsilon(\\theta)$ et $H\\epsilon(\\theta)$ sont deux vecteurs gaussiens indépendantes, or nous avons vu que $\\hat{\\sigma}^2$ est une fonction deterministe de $(I_n - H)\\epsilon(\\theta)$ et $\\hat{\\beta}$ est une fonction deterministe de $H\\epsilon(\\theta)$.\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4042d959",
+   "id": "9c954937",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.4 Tests statistiques, cas régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie4\"></a>"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62f97b6",
+   "id": "943fc75c",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 15</font></h2> <a class=\"anchor\" id=\"E15\"></a>"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e82dd333",
+   "id": "a947c252",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}$.\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e546896",
+   "id": "12d1fb8d",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 16</font></h2> <a class=\"anchor\" id=\"E16\"></a>"
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a48771b7",
+   "id": "52d539e7",
    "metadata": {},
    "source": [
     "Soit $q_{\\frac{\\alpha}{2}}^{n-p}$ et $q_{1 - \\frac{\\alpha}{2}}^{n-p}$ les quantiles d'ordre $\\frac{\\alpha}{2}$ et $1 - \\frac{\\alpha}{2}$ de la loi de Student à $(n-p)$ degrés de liberté $T_{(n-p)}$.\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6840ffe5",
+   "id": "253dabc6",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 17</font></h2> <a class=\"anchor\" id=\"E17\"></a>"
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae618ec1",
+   "id": "cc9982be",
    "metadata": {},
    "source": [
     "Premièrement, on définit la statistique de test\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358ea978",
+   "id": "50ce6374",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 18</font></h2> <a class=\"anchor\" id=\"E18\"></a>"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d897dc",
+   "id": "06547747",
    "metadata": {},
    "source": [
     "Étant donné l'observation $x$, la $p$-valeur est la valeur $\\hat{\\alpha}$ telle que $H_0$ est rejetée pour tout $\\alpha > \\hat{\\alpha}$.\n",
@@ -593,15 +593,15 @@
     "\\end{align}$$\n",
     "Soit $F_{n-p}$ la fonction de répartition pour une loi de Student à $(n-p)$ degrés de liberté. On a\n",
     "$$\\begin{align}\n",
-    "1 - \\frac{\\hat{\\alpha}}{2} = F\\left( \\frac{|\\beta^T x|}{\\hat{\\sigma}\\sqrt{x^T(Z^TZ)^{-1}x}} \\right) \\\\\n",
-    "\\iff \\hat{\\alpha} = 2 - 2F\\left( \\frac{|\\beta^T x|}{\\hat{\\sigma}\\sqrt{x^T(Z^TZ)^{-1}x}} \\right)\n",
+    "1 - \\frac{\\hat{\\alpha}}{2} = F_{n-p}\\left( \\frac{|\\beta^T x|}{\\hat{\\sigma}\\sqrt{x^T(Z^TZ)^{-1}x}} \\right) \\\\\n",
+    "\\iff \\hat{\\alpha} = 2 - 2F_{n-p}\\left( \\frac{|\\beta^T x|}{\\hat{\\sigma}\\sqrt{x^T(Z^TZ)^{-1}x}} \\right)\n",
     "\\end{align}$$\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "414c9d62",
+   "id": "380ca65a",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 19</font></h2> <a class=\"anchor\" id=\"E19\"></a>"
@@ -609,19 +609,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bdbee5b",
+   "id": "361681dc",
    "metadata": {},
    "source": [
     "Soit $A$ une matrice de taille $q \\times p$ de rang $q \\leq p$ et donc \n",
     "$$ rg \\left( A(Z^TZ)^{-1}A^T \\right) = q. $$\n",
     "\n",
     "D'autre part $A(\\hat{\\beta} - \\beta)$ est un vecteur gaussien de moyenne nulle et de variance $A \\mathrm{Var}_{\\theta}(\\hat{\\beta}) A^T = \\sigma^2 A (Z^TZ)^{-1} A^T$. Donc\n",
-    "$$ \\frac{1}{\\sigma^2} \\left( A (\\beta^T - \\beta) \\right)^T [A(Z^TZ)^{-1}A^T]^{-1} \\left( A (\\beta^T - \\beta) \\right) \\sim \\chi_q^2.$$"
+    "$$ \\frac{1}{\\sigma^2} \\left( A (\\beta^T - \\beta) \\right)^T [A(Z^TZ)^{-1}A^T]^{-1} \\left( A (\\beta^T - \\beta) \\right) \\sim \\chi_q^2.$$\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8be1d8a",
+   "id": "25b8efb7",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 20</font></h2> <a class=\"anchor\" id=\"E20\"></a>"
@@ -629,13 +630,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7d7653",
+   "id": "e2bcf95b",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e4352710",
+   "id": "ed8fac7b",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='gray'>Python Imports</font></h2> <a class=\"anchor\" id=\"imports\"></a>"
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3332626c",
+   "id": "5eaae604",
    "metadata": {},
    "source": [
     "Dans cette section, on va importer tous les paquets qu'on ira utiliser."
@@ -652,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e2c4358",
+   "id": "d8b756b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ab119e9",
+   "id": "cd734033",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>2. Pratique</font></h1> <a class=\"anchor\" id=\"Pratique\"></a>"
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33911dc8",
+   "id": "e25a60a2",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"P1\"></a>"
@@ -682,14 +683,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "344ffa15",
+   "id": "88806a0c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "09153862",
+   "id": "4b4bc325",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"P2\"></a>"
@@ -698,14 +699,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b67c8d3",
+   "id": "acf6aa40",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "69beb4ce",
+   "id": "d8832a49",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"P3\"></a>"
@@ -714,14 +715,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3faabf",
+   "id": "8a48b1b6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a12abff4",
+   "id": "dbee5121",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"P4\"></a>"
@@ -730,14 +731,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca3eb57",
+   "id": "f2b6bd92",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "94e523ab",
+   "id": "9a68204f",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"P5\"></a>"
@@ -746,14 +747,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5759c88",
+   "id": "b9a594da",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a4b69ed2",
+   "id": "9d17d7bd",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"P6\"></a>"
@@ -762,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6518e8",
+   "id": "eac4ef22",
    "metadata": {},
    "outputs": [],
    "source": []
