--- a/GroupProjects/DM1/DM1_GROUPE11.ipynb
+++ b/GroupProjects/DM1/DM1_GROUPE11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae87655c",
+   "id": "12b00573",
    "metadata": {},
    "source": [
     "# <font color='289C4E'>Devoir Maison 1: Régression Linéaire Multiple\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e23955",
+   "id": "a7377065",
    "metadata": {},
    "source": [
     "### <font color='289C4E'>Table des matières<font><a class='anchor' id='top'></a>\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ef80a32",
+   "id": "c9849967",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.1 Estimation par moindres carrés du vecteur $\\beta$</font></h1> <a class=\"anchor\" id=\"Partie1\"></a>"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f866cc5",
+   "id": "e1c9c95b",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"E1\"></a>"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c365889f",
+   "id": "1487691b",
    "metadata": {},
    "source": [
     "On remarque que toute solution $\\hat{u} \\in \\argmin_{u \\in \\mathbb{R}^p} J_n(u)$ est une solution de l'équation $\\nabla J_n(u) = 0_{\\mathbb{R}^p}$.\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f7957c",
+   "id": "0648a4c5",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"E2\"></a>"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad67a15",
+   "id": "84c230be",
    "metadata": {},
    "source": [
     "Premièrement, on a $ Z^\\#Z = (Z^TZ)^{-1}Z^TZ = I_p $. $\\\\$\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cf59c0d",
+   "id": "f04929d1",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"E3\"></a>"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a4a8016",
+   "id": "e072dae6",
    "metadata": {},
    "source": [
     "L'estimateur des moindres carrés $\\hat{\\beta}$ vérifie\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e8b7d5a",
+   "id": "7101b3fb",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"E4\"></a>"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "115d0a06",
+   "id": "2b31d57d",
    "metadata": {},
    "source": [
     "On veut calculer $\\mathbb{E}[\\hat{\\beta}]$.\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3a0f89",
+   "id": "d12fc420",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"E5\"></a>"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7073ddfa",
+   "id": "486db670",
    "metadata": {},
    "source": [
     "Soit $\\theta \\in \\Theta$. On a\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a1f3d0",
+   "id": "bdeb0233",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"E6\"></a>"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b09d7f",
+   "id": "50c9ab4a",
    "metadata": {},
    "source": [
     "Pour que l'estimateur soit sans biais, on veut $\\mathbb{E}[\\tilde{\\beta}] = \\beta$.\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e38b9f",
+   "id": "2a3b57ab",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 7</font></h2> <a class=\"anchor\" id=\"E7\"></a>"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0072fc08",
+   "id": "e5cac73a",
    "metadata": {},
    "source": [
     "On veut calculer la matrice de covariance $\\mathrm{Cov}_{\\theta}(\\tilde{\\beta},\\hat{\\beta})$.\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9451ad",
+   "id": "ddf779db",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 8</font></h2> <a class=\"anchor\" id=\"E8\"></a>"
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3020bf9",
+   "id": "9f12630d",
    "metadata": {},
    "source": [
     "Soit $\\theta \\in \\Theta$ et $x \\in \\mathbb{R}^p$.\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd59649f",
+   "id": "1a29e9d0",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.2 Estimation de la variance $\\sigma^2$ et Coefficient de détermination</font></h1> <a class=\"anchor\" id=\"Partie2\"></a>"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22a6f04a",
+   "id": "e3561a0a",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 9</font></h2> <a class=\"anchor\" id=\"E9\"></a>"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e13772a",
+   "id": "381c193c",
    "metadata": {},
    "source": [
     "On pose\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a3274f",
+   "id": "d64f35e7",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 10</font></h2> <a class=\"anchor\" id=\"E10\"></a>"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a638203f",
+   "id": "b283f6cb",
    "metadata": {},
    "source": [
     "On a $ ||Y||^2 = || HY + (I_n - H)Y ||^2$.\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d590d5d1",
+   "id": "2a686a93",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.3 Cas de la régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie3\"></a>"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b004950",
+   "id": "a6bab012",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 11</font></h2> <a class=\"anchor\" id=\"E11\"></a>"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cfcb5c7",
+   "id": "0a224d6b",
    "metadata": {},
    "source": [
     "Une fois que les $\\{Y_i\\}$ sont i.i.d la vraisemblance est donnée par\n",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a575284",
+   "id": "9260aac3",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 12</font></h2> <a class=\"anchor\" id=\"E12\"></a>"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e7d183",
+   "id": "2b6bdead",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}, \\theta \\in \\Theta$ on a\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a2e1cf",
+   "id": "ef460f70",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 13</font></h2> <a class=\"anchor\" id=\"E13\"></a>"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eff6e23",
+   "id": "e41fa562",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}, \\theta \\in \\Theta$.\n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618aab5f",
+   "id": "a55fdce5",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 14</font></h2> <a class=\"anchor\" id=\"E14\"></a>"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179081b8",
+   "id": "fe6fd82d",
    "metadata": {},
    "source": [
     "Par le théorème de Cochran on sait que $(I_n - H)\\epsilon(\\theta)$ et $H\\epsilon(\\theta)$ sont deux vecteurs gaussiens indépendantes, or nous avons vu que $\\hat{\\sigma}^2$ est une fonction deterministe de $(I_n - H)\\epsilon(\\theta)$ et $\\hat{\\beta}$ est une fonction deterministe de $H\\epsilon(\\theta)$.\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b4c2534",
+   "id": "fe8038e5",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.4 Tests statistiques, cas régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie4\"></a>"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06979402",
+   "id": "182ffb76",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 15</font></h2> <a class=\"anchor\" id=\"E15\"></a>"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04f7905",
+   "id": "e2c12fc4",
    "metadata": {},
    "source": [
     "Sous $\\mathbb{P}_{\\theta}$.\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0e5305",
+   "id": "22e94716",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 16</font></h2> <a class=\"anchor\" id=\"E16\"></a>"
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85730b98",
+   "id": "be1424bf",
    "metadata": {},
    "source": [
     "Soit $q_{\\frac{\\alpha}{2}}^{n-p}$ et $q_{1 - \\frac{\\alpha}{2}}^{n-p}$ les quantiles d'ordre $\\frac{\\alpha}{2}$ et $1 - \\frac{\\alpha}{2}$ de la loi de Student à $(n-p)$ degrés de liberté $T_{(n-p)}$.\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a903ef9",
+   "id": "e2285bfa",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 17</font></h2> <a class=\"anchor\" id=\"E17\"></a>"
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b3e11bf",
+   "id": "d281763b",
    "metadata": {},
    "source": [
     "Premièrement, on définit la statistique de test\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7351160",
+   "id": "6f2ec0ed",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 18</font></h2> <a class=\"anchor\" id=\"E18\"></a>"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d42ce83",
+   "id": "f6bd2257",
    "metadata": {},
    "source": [
     "Étant donné l'observation $x$, la $p$-valeur est la valeur $\\hat{\\alpha}$ telle que $H_0$ est rejetée pour tout $\\alpha > \\hat{\\alpha}$.\n",
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a420dbd7",
+   "id": "ae7ff796",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 19</font></h2> <a class=\"anchor\" id=\"E19\"></a>"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3cb32f",
+   "id": "e8b37345",
    "metadata": {},
    "source": [
     "Soit $A$ une matrice de taille $q \\times p$ de rang $q \\leq p$ et donc \n",
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2ca268",
+   "id": "266a6a69",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 20</font></h2> <a class=\"anchor\" id=\"E20\"></a>"
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b79ca9",
+   "id": "6cf48842",
    "metadata": {},
    "source": [
     "On pose $A = \n",
@@ -646,12 +646,12 @@
     "\n",
     "On remarque que $A \\beta = \\begin{pmatrix} \\beta_1 \\\\ \\beta_2 \\end{pmatrix} $. Donc, d'après l'exercice 19 nous avons pour $(\\beta_1, \\beta_2)$ la région critique suivante\n",
     "$$ \\mathrm{RC}_{\\alpha}(\\beta_1, \\beta_2) = \\left\\{ \\frac{1}{2\\hat{\\sigma}^2} (\\hat{\\beta} - \\beta)^T [A(Z^TZ)^{-1}A^T]^{-1} (\\hat{\\beta} - \\beta) \\leq q_{\\frac{\\alpha}{2}} \\right\\} $$\n",
-    "où $q_{\\frac{\\alpha}{2}}$ est le quantile d'ordre $\\frac{\\alpha}{2}$ d'une loi de Fisher à (q, n-p) = (2, n-p) degrés de liberté."
+    "où $q_{\\frac{\\alpha}{2}}$ est le quantile d'ordre $\\frac{\\alpha}{2}$ d'une loi de Fisher à $(q, n-p) = (2, n-p)$ degrés de liberté."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2cbe7551",
+   "id": "cb8febc9",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='gray'>Python Imports</font></h2> <a class=\"anchor\" id=\"imports\"></a>"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee062b2",
+   "id": "00c3227f",
    "metadata": {},
    "source": [
     "Dans cette section, on va importer tous les paquets qu'on ira utiliser."
@@ -667,13 +667,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5a7eb621",
+   "execution_count": 34,
+   "id": "5469ac2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np\n",
+    "from numpy.linalg import inv\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy.random as npr\n",
     "import scipy.stats as sps"
@@ -681,7 +683,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbe4f2e5",
+   "id": "cb6627d3",
+   "metadata": {},
+   "source": [
+    "On profite aussi pour lire le ficher Excel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fcaa3a72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excel_file = pd.read_excel('ozone_complet.xlsx')\n",
+    "df = pd.DataFrame(excel_file)\n",
+    "df.dropna()#on supprime les valeurs nan (ainda tem!! isso nao ta resolvendo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75e9d4c",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>2. Pratique</font></h1> <a class=\"anchor\" id=\"Pratique\"></a>"
@@ -689,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628adc21",
+   "id": "705cd6a4",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"P1\"></a>"
@@ -697,31 +719,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c7494153",
+   "execution_count": 41,
+   "id": "57494a46",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nombre de lignes dans le dataframe\n",
+    "n = df.shape[0]\n",
+    "\n",
+    "#on definit les collones avec lesquelles on veut travailler\n",
+    "O3 = df[\"maxO3\"].astype('float').tolist()\n",
+    "T12 = df[\"T12\"].astype('float').tolist()\n",
+    "Vx = df[\"Vx\"].astype('float').tolist()\n",
+    "Ne12 = df[\"Ne12\"].astype('float').tolist()\n",
+    "intercept = np.ones(n)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "190608dc",
+   "id": "1a678308",
+   "metadata": {},
+   "source": [
+    "On remarque qu'il s'agit d'une regression linéaire multiple comme abordé dans la section 1.1 avec $p = 4$ et $n = 1366$. Pour construire la matrice $Z$, on utilise les colonnes du dataframe comme colonnes de $Z$. Puis, on calcule l'estimateur des moindres carrés $$\\hat{\\beta} = (Z^TZ)^{-1}Z^TY.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "692455ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan nan nan nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#on construit la matrice Z et sa transposee ZT\n",
+    "Z = np.transpose(np.array([T12, Vx, Ne12, intercept])) # 1464 lignes, 4 colonnes\n",
+    "ZT = np.transpose(Z)\n",
+    "\n",
+    "estimateur_beta = np.matmul(np.matmul(inv(np.matmul(ZT, Z)), ZT), O3)\n",
+    "print(estimateur_beta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11260620",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"P2\"></a>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1347306f",
+   "metadata": {},
+   "source": [
+    "Dans l'exercice 12 de la section théorique, on a établit que la distribution de $\\hat{\\beta}$ est $ \\mathcal{N}\\left(\\beta, \\sigma^2(Z^TZ)^{-1} \\right)$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a74a10ae",
+   "id": "fc4d6848",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6b17a5fc",
+   "id": "5aed72e4",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"P3\"></a>"
@@ -730,14 +801,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c1b170",
+   "id": "dd9dd5e8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "45da2516",
+   "id": "0a81deef",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"P4\"></a>"
@@ -746,14 +817,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf0c01d",
+   "id": "715f72ce",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "06230876",
+   "id": "ec852bcd",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"P5\"></a>"
@@ -762,14 +833,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be651fb",
+   "id": "2f8bf4df",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9c610e9d",
+   "id": "e0a7e945",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"P6\"></a>"
@@ -778,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34427a6b",
+   "id": "8a519a54",
    "metadata": {},
    "outputs": [],
    "source": []
