--- a/EN2/EN2_GROUPE11.ipynb
+++ b/EN2/EN2_GROUPE11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d10466f7",
+   "id": "60cd3ce1",
    "metadata": {},
    "source": [
     "# <font color='289C4E'>Exploration Numérique 2\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a74a0955",
+   "id": "5630d4b9",
    "metadata": {},
    "source": [
     "### <font color='289C4E'>Table des matières<font><a class='anchor' id='top'></a>\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3474071",
+   "id": "bd16c8a8",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='gray'>Python Imports</font></h2> <a class=\"anchor\" id=\"imports\"></a>"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f2adaf",
+   "id": "3f1e8864",
    "metadata": {},
    "source": [
     "Dans cette section, on va importer tous les paquets qu'on ira utiliser plus tard."
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7cf71d95",
+   "id": "a7a211b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,23 +57,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "091113fa",
+   "id": "0f78fefd",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"1\"></a>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3bb25ad",
+   "cell_type": "markdown",
+   "id": "a9a0c7b2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "La vraisemblance est $$l(\\theta) = \\left(\\prod_{i=1}^n \\frac{1}{\\sqrt{2\\pi}\\sigma_0} e^{-\\frac{(x_i-\\mu_0)^2}{2\\sigma_0^2}}\\right)\\left(\\prod_{i=1}^p \\frac{1}{\\sqrt{2\\pi}\\sigma_1} e^{-\\frac{(y_i-\\mu_1)^2}{2\\sigma_1^2}}\\right) \\\\ \\implies \\ln(l(\\theta)) = -\\frac{n+p}{2}\\ln(2\\pi) - n\\ln(\\sigma_0) -p\\ln(\\sigma_1) - \\frac{1}{2\\sigma_0^2}\\sum_{i=1}{n}(x_i - \\mu_0)^2 - \\frac{1}{2\\sigma_1^2}\\sum_{i=1}{p}(y_i - \\mu_1)^2.$$\n",
+    "Alors, $\\nabla_\\theta \\ln(l(\\theta)) = 0$ donne\n",
+    "$$\\begin{align}\n",
+    "\\begin{cases}\n",
+    "\\hat{\\mu}_0 &= \\frac{1}{n}\\sum_{i=1}^n x_i \\\\\n",
+    "\\hat{\\mu}_1 &= \\frac{1}{p}\\sum_{i=1}^p y_i \\\\\n",
+    "\\hat{\\sigma}_0^2 &= \\frac{1}{n}\\sum_{i=1}^n (x_i - \\hat{\\mu}_0)^2 \\\\\n",
+    "\\hat{\\sigma}_1^2 &= \\frac{1}{p}\\sum_{i=1}^p (y_i - \\hat{\\mu}_1)^2\n",
+    "\\end{cases}\n",
+    "\\end{align}$$\n",
+    "on conclue $\\hat{\\theta}_{MV} = \\left(\\bar{X}_n, \\bar{Y}_p, \\frac{1}{n}\\sum_{i=1}^n (x_i - \\bar{X}_n)^2, \\frac{1}{p}\\sum_{i=1}^p (y_i - \\bar{Y}_p)^2  \\right)$."
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "b488e8cf",
+   "id": "53f3f616",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"2\"></a>"
@@ -82,14 +92,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e83b080",
+   "id": "56770e4a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b906152e",
+   "id": "a27c82be",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"3\"></a>"
@@ -98,14 +108,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d8361f",
+   "id": "66cbe48c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3b843695",
+   "id": "65921bea",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"4\"></a>"
@@ -114,14 +124,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c546daf3",
+   "id": "099a4f8d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e5c6e550",
+   "id": "042e20b5",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"5\"></a>"
@@ -130,14 +140,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5dc49c8",
+   "id": "854d38a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c2e4e7c8",
+   "id": "8507193e",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"6\"></a>"
@@ -146,14 +156,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c424ef9f",
+   "id": "cec9253a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "35ea753a",
+   "id": "28c812a4",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 7</font></h2> <a class=\"anchor\" id=\"7\"></a>"
@@ -162,14 +172,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ca4dc0",
+   "id": "4895a044",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ec5a3284",
+   "id": "544bbf9f",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 8</font></h2> <a class=\"anchor\" id=\"8\"></a>"
@@ -178,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b18c13",
+   "id": "a0548e95",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a1794c",
+   "id": "92a1cc1f",
    "metadata": {},
    "outputs": [],
    "source": []
