--- a/DM2/DM2_GROUPE11.ipynb
+++ b/DM2/DM2_GROUPE11.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9fd0dd2",
+   "id": "46210caf",
    "metadata": {},
    "source": [
     "Maintenant, on va importer le fichier $\\texttt{Titanic.csv}$ et créer le dataframe pandas qu'on va utiliser pour la suite."
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ba0ca98c",
+   "id": "7c31f9d0",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8deb50c",
+   "id": "37cafa2e",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eeff5dbe",
+   "id": "f3a60872",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4fa96d",
+   "id": "f50758e4",
    "metadata": {},
    "source": [
     "L'analyse de la proportion de passagers tués par sexe montre que les hommes sont plus nombreux que les femmes. En effet, les hommes sont proportionnellement $3,24$ fois plus décédés que les femmes."
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4e88b69c",
+   "id": "6c013ed4",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57169926",
+   "id": "2a7db820",
    "metadata": {},
    "source": [
     "Tout comme nous l'avons observé pour les sexes, il semble également que les décès soient associés à la classe du passager. Les passagers de première classe sont proportionnellement moins décédés que les passagers de deuxième classe, qui à leur tour sont moins décédés que les passagers de troisième classe."
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f90c937",
+   "id": "678b4fb7",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5298dda5",
+   "id": "c7b536a0",
    "metadata": {},
    "source": [
     "En observant la ligne $\\textbf{Survived}$, on conclue que les variables avec les plus forts correlations sont\n",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e604c33b",
+   "id": "e2bf6054",
    "metadata": {},
    "source": [
     "D'abord, il faut calculer le estimateur du maximum de vraisemblance pour chaque paramètre du modèle. On va implementer l'algorithme $\\textbf{IRLS}$ décrit dans le sujet."
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d08e52e7",
+   "id": "ec155a9c",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "164e638b",
+   "id": "8b50ab3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8071c806",
+   "id": "af20bea3",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36299f71",
+   "id": "a844855d",
    "metadata": {},
    "source": [
     "Ici, on utilise le résultat de la question 14. On sait que l'intervalle de confiance de niveau $1 - \\alpha$ pour le paramètre $\\hat{\\theta}_{n}^{MV}$ est\n",
@@ -1302,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "724d25ef",
+   "id": "2384ff21",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f323acc",
+   "id": "9bb71579",
    "metadata": {},
    "source": [
     "On utilise le résultat de la question 16. On sait que la p-valeur est\n",
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4e3f708",
+   "id": "343f7b1a",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7456d2ad",
+   "id": "ae882276",
    "metadata": {},
    "source": [
     "On en conclue que l'hipothèse $H_0$ est compatible avec les données car la p-valeur est assez grande.\n",
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6099a546",
+   "id": "7685607a",
    "metadata": {},
    "outputs": [
     {
@@ -1404,11 +1404,11 @@
      "output_type": "stream",
      "text": [
       "theta_MV  = [ 0.08070783 -2.09468865  0.00378042 -0.25201982  0.01869947]\n",
-      "Intervale de confiance Pclass = [-0.061570741189408085, 0.22298639683812516]     taille=0.28455713802753324\n",
-      "Intervale de confiance Sex = [-2.464734654525202, -1.7246426504916765]     taille=0.7400920040335255\n",
-      "Intervale de confiance Age = [-0.007227760900047337, 0.014788609211628301]     taille=0.022016370111675638\n",
-      "Intervale de confiance SibSp = [-0.47607957497404935, -0.027960069199098603]     taille=0.44811950577495074\n",
-      "Intervale de confiance Fare = [0.012400955949137434, 0.02499798421127001]     taille=0.012597028262132576\n"
+      "Intervale de confiance Pclass = [-0.061570741189408085, 0.22298639683812516]\n",
+      "Intervale de confiance Sex = [-2.464734654525202, -1.7246426504916765]\n",
+      "Intervale de confiance Age = [-0.007227760900047337, 0.014788609211628301]\n",
+      "Intervale de confiance SibSp = [-0.47607957497404935, -0.027960069199098603]\n",
+      "Intervale de confiance Fare = [0.012400955949137434, 0.02499798421127001]\n"
      ]
     }
    ],
@@ -1428,16 +1428,14 @@
     "for i in range(p):\n",
     "    borne_gauche = theta_MV[i] - np.sqrt(beta[i][i]/n)*quantile\n",
     "    borne_droite = theta_MV[i] + np.sqrt(beta[i][i]/n)*quantile\n",
-    "    print(f\"Intervale de confiance {parametres[i]} = [{borne_gauche}, {borne_droite}]     taille={borne_droite-borne_gauche}\")"
+    "    print(f\"Intervale de confiance {parametres[i]} = [{borne_gauche}, {borne_droite}]\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e509c798",
+   "id": "6f09fc98",
    "metadata": {},
-   "source": [
-    "On observe que les intervalles de confiance sont plus petites, donc le modèle est devenu plus précis."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1450,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "204c2436",
+   "id": "89adcad9",
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14876990",
+   "id": "b0fd0b9e",
    "metadata": {},
    "source": [
     "On en conclue que l'hipothèse $H_0$ est très incompatible avec les données car la p-valeur est très petite.\n",
@@ -1488,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b46eb735",
+   "id": "19a24c63",
    "metadata": {},
    "outputs": [
     {
@@ -1496,10 +1494,10 @@
      "output_type": "stream",
      "text": [
       "theta_MV  = [-0.05894751 -2.03358712  0.02437344  0.0701247 ]\n",
-      "Intervale de confiance Pclass = [-0.19285013883199947, 0.07495512783934727]     taille=0.26780526667134674\n",
-      "Intervale de confiance Sex = [-2.3959431264895317, -1.6712311108074849]     taille=0.7247120156820468\n",
-      "Intervale de confiance Age = [0.015478504732645292, 0.03326836545210676]     taille=0.01778986071946147\n",
-      "Intervale de confiance SibSp = [-0.11877865964864393, 0.2590280678889968]     taille=0.3778067275376407\n"
+      "Intervale de confiance Pclass = [-0.19285013883199947, 0.07495512783934727]\n",
+      "Intervale de confiance Sex = [-2.3959431264895317, -1.6712311108074849]\n",
+      "Intervale de confiance Age = [0.015478504732645292, 0.03326836545210676]\n",
+      "Intervale de confiance SibSp = [-0.11877865964864393, 0.2590280678889968]\n"
      ]
     }
    ],
@@ -1519,16 +1517,14 @@
     "for i in range(p):\n",
     "    borne_gauche = theta_MV[i] - np.sqrt(beta[i][i]/n)*quantile\n",
     "    borne_droite = theta_MV[i] + np.sqrt(beta[i][i]/n)*quantile\n",
-    "    print(f\"Intervale de confiance {parametres[i]} = [{borne_gauche}, {borne_droite}]     taille={borne_droite-borne_gauche}\")"
+    "    print(f\"Intervale de confiance {parametres[i]} = [{borne_gauche}, {borne_droite}]\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "604fa7c4",
+   "id": "df6f96ad",
    "metadata": {},
-   "source": [
-    "On observe que l'intervalle de confiance est moins grand, donc le modèle est devenu plus précis."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1541,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "14acc1ab",
+   "id": "3b96f20b",
    "metadata": {},
    "outputs": [
     {
