:memo: en3 questoes 12 e 13

--- a/EN3/EN3-GROUPE11.ipynb
+++ b/EN3/EN3-GROUPE11.ipynb
@@ -1383,8 +1383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "add5aad2",
+   "execution_count": 29,
+   "id": "7026df05",
    "metadata": {},
    "outputs": [
     {
@@ -1392,53 +1392,18 @@
      "output_type": "stream",
      "text": [
       "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but QuadraticDiscriminantAnalysis was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LDA:  précision=0.898383554173028  rappel=0.9888095238095238\n",
-      "QDA:  précision=0.9318380099319572  rappel=0.9608730158730158\n"
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (0,) (2,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [29]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m precision_lda \u001b[38;5;241m=\u001b[39m precision_score(y_test, y_pred_lda)\n\u001b[1;32m     21\u001b[0m recall_lda \u001b[38;5;241m=\u001b[39m recall_score(y_test, y_pred_lda)\n\u001b[0;32m---> 22\u001b[0m confusion_matrix_lda \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m confusion_matrix(y_test, y_pred_lda)\n\u001b[1;32m     24\u001b[0m precisions_lda\u001b[38;5;241m.\u001b[39mappend(precision_lda)\n\u001b[1;32m     25\u001b[0m recalls_lda\u001b[38;5;241m.\u001b[39mappend(recall_lda)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (2,2) "
      ]
     }
    ],
@@ -1448,11 +1413,11 @@
     "\n",
     "precisions_lda = []\n",
     "recalls_lda = []\n",
-    "confusion_matrices_lda = []\n",
+    "confusion_matrix_lda = []\n",
     "\n",
     "precisions_qda = []\n",
     "recalls_qda = []\n",
-    "confusion_matrices_qda = []\n",
+    "confusion_matrix_qda = []\n",
     "\n",
     "for train_idx, test_idx in k_fold.split(X, y):\n",
     "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
@@ -1464,11 +1429,10 @@
     "    # Calculate precision and recall for LDA.\n",
     "    precision_lda = precision_score(y_test, y_pred_lda)\n",
     "    recall_lda = recall_score(y_test, y_pred_lda)\n",
-    "    confusion_matrix_lda = confusion_matrix(y_test, y_pred_lda)\n",
+    "    confusion_matrix_lda += confusion_matrix(y_test, y_pred_lda)\n",
     "\n",
     "    precisions_lda.append(precision_lda)\n",
     "    recalls_lda.append(recall_lda)\n",
-    "    confusion_matrices_lda.append(confusion_matrix_lda)\n",
     "\n",
     "    # QDA is already trained, so we only predict here.\n",
     "    y_pred_qda = qda.predict(X_test)\n",
@@ -1476,11 +1440,10 @@
     "    # Calculate precision and recall for QDA.\n",
     "    precision_qda = precision_score(y_test, y_pred_qda)\n",
     "    recall_qda = recall_score(y_test, y_pred_qda)\n",
-    "    confusion_matrix_qda = confusion_matrix(y_test, y_pred_qda)\n",
+    "    confusion_matrix_qda += confusion_matrix(y_test, y_pred_qda)\n",
     "\n",
     "    precisions_qda.append(precision_qda)\n",
     "    recalls_qda.append(recall_qda)\n",
-    "    confusion_matrices_qda.append(confusion_matrix_qda)\n",
     "\n",
     "# Calculez les moyennes des précisions et des rappels pour LDA et QDA.\n",
     "mean_precision_lda = np.mean(precisions_lda)\n",
@@ -1504,8 +1467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a98910b3",
+   "execution_count": 30,
+   "id": "ad439fdb",
    "metadata": {},
    "outputs": [
     {
@@ -1584,6 +1547,14 @@
     "    print(\"Matrice de confusion pour QDA Fold\", i+1)\n",
     "    print(confusion_matrices_qda[i])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92c71e38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
